2004-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-get-headers): Improve regexp in
	order to fetch articles of the English edition.

2004-03-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-mytown.el (shimbun-asahi-mytown-get-headers):
	Adjust the number of years correctly even if an article is very
	old.
	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Ditto.
	* shimbun/sb-sankei.el (shimbun-get-headers): Ditto.
	* shimbun/sb-yomiuri.el (shimbun-yomiuri-get-headers): Ditto.

2004-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-prepare-article): Remove
	rectangle section.

2004-03-22  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-type): Check if w3m-compile-options contains "m17n".

2004-03-19  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-add-referer-regexps): Fix typo.
	(w3m-add-referer-predicate-function): New user option.
	(w3m-add-referer-predicate-by-referer-regexps): New function.
	(w3m-add-referer-predicate-by-hosts): Ditto.
	(w3m-request-arguments): Call w3m-add-referer-predicate-function.
	(w3m-header-arguments): Ditto.

	* octet.el (mime-view-octet): Avoid redundant invocation of
	`mime-entity-content'.

2004-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el: Support the English edition.  It may need
	to be fixed when the regular distribution starts.
	(shimbun-kantei-url): Exclude the subdirectory.
	(shimbun-kantei-groups): Add m-magazine-en and m-magazine-ja.
	(shimbun-kantei-content-start): Support the English edition.
	(shimbun-kantei-content-end): Ditto.
	(shimbun-index-url): Ditto.
	(shimbun-from-address): Ditto.
	(shimbun-get-headers): Ditto.
	(shimbun-clear-contents): Ditto.

2004-03-14  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-symbol.el (w3m-mule-unicode-symbol): Fixed 32th character.
	Thanks to Taichi KAWABATA for his report.

2004-03-10  Katsumi Yamaoka  <yamaoka@jpl.org>
