@@ -1,3 +1,10 @@
+2004-04-04  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* w3m.el (w3m-header-arguments): Set unibyte at work buffer.
+
+	* w3m-form.el (w3m-form-make-form-data): Set unibyte at work buffer;
+	Encode form data.
+
 2004-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-kantei.el (shimbun-get-headers): Improve regexp in
